--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -28,10 +28,10 @@
                     </div>
                     <div class="infos">
                       <span
-                        ><i class="fas fa-user-circle"></i>&nbsp;&nbsp; <% userdata.name %>
+                        ><i class="fas fa-user-circle"></i>&nbsp;&nbsp; <%= userdata.name %>
                        </span
                       ><span
-                        ><i class="fas fa-briefcase"></i>&nbsp;&nbsp; <% userdata.about %>
+                        ><i class="fas fa-briefcase"></i>&nbsp;&nbsp; <%= userdata.about %>
                         </span
                       ><span
                         ><i class="fas fa-map-marker-alt"></i
@@ -72,19 +72,17 @@
               <div class="lx-row">
                 <div class="lx-row lx-card">
                   <h1 class="title">
-                    <i class="fas fa-info-circle"></i>&nbsp;Welcome to Armaan's
+                    <i class="fas fa-info-circle"></i>&nbsp;Welcome to  <%= userdata.name %>
                     corner of the Internet
                   </h1>
                 </div>
                 <div class="lx-row lx-card">
                   <h1 class="title">
-                    <i class="fas fa-hand-point-right"></i>&nbsp;About me
+                    <i class="fas fa-hand-point-right"></i>&nbsp; <%= userdata.about %>
                   </h1>
                   <div class="text">
                     <p>
-                      Hi, my name is&nbsp;<b>Armaan Dhanji</b>, but I'm better
-                      known by my nickname&nbsp;<i>@armaand</i>, and I'm a
-                      teacher in the School of Computing at BCIT.
+                      Hi, my name is&nbsp;<b><%= userdata.name %></b>, <%= userdata.about %>
                     </p>
                     <p>
                       I&nbsp;&nbsp;<i class="fas fa-heart"></i>&nbsp; to code
